# Memoria

./: .gitignore  HelloAgent.py  MemoriaPRD_v2.md  config.json  config_explanation.md  main.py  pyproject.toml  tutorial.py
Memoria/agents/: agents.py
Memoria/agents/patterns/: __init__.py  planner.py  react.py
Memoria/graph/: agent.py
Memoria/llm/: _init_.py  base.py  factory.py  openai_client.py
Memoria/memory/: Manager.py  core_memory.py  factory.py  vector_index.py
Memoria/memory/policy/: base.py  default_policy.py
Memoria/memory/processor/: default_processor.py
Memoria/memory/store/: base.py  episodic_store.py  interface.md  semantic_store.py
Memoria/prompt/: __init__.py  builder.py  templates.py
Memoria/runtime/: agent_runtime.py
Memoria/tools/: archival_tools.py  memory_tools.py
examples/: langgraph_demo.py
tests/: test_llm.py  test_openai_client.py
