[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Memoria"
version = "0.1.0"
description = "A multi-agent voice companion system with long-term memory"
authors = [{name = "AGSaturn", email = "206668465+AGSaturn@users.noreply.github.com"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "jinja2"
]

[project.optional-dependencies]
dev = ["pytest", "respx", "httpx"]

[project.urls]
Repository = "https://github.com/AGSaturn/Memoria.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["Memoria*"]